# telewrap

./: .gitignore  README.md  pyproject.toml  requirements.txt  telegram_wrapper.py  telewrapper.py
.github/workflows/: python-publish.yml  test.yml
examples/: is_website_ready.py
telewrap/: __init__.py
telewrap/cli/: __init__.py  _config.py  cli.py
telewrap/core/: bot.py  constants.py  message_funcs.py  raising_thread.py  shell_command.py
tests/: test_command.py  test_telewrap.py
